[gd_scene load_steps=8 format=3 uid="uid://1fqdxfaxhec0"]

[ext_resource type="Script" path="res://Scripts/Cutscenes/best_ending.gd" id="1_5j16w"]
[ext_resource type="Texture2D" uid="uid://c480mankavxqy" path="res://Assets/Textures/UI Screens/Cutscenes/Good Ending/GoodBestEnding_Panel1.png" id="1_rbkjt"]
[ext_resource type="Texture2D" uid="uid://ccyd2wsrig68t" path="res://Assets/Textures/UI Screens/Cutscenes/Best Ending/BestEnding_Panel2_Alt.png" id="2_4b74h"]
[ext_resource type="Texture2D" uid="uid://clwb6mvfdb5sk" path="res://Assets/Textures/UI Screens/Cutscenes/Best Ending/BestEnding_Panel3.png" id="3_veaat"]
[ext_resource type="Texture2D" uid="uid://8pajodbm2ah6" path="res://Assets/Textures/UI Screens/Cutscenes/Best Ending/BestEnding_Panel4.png" id="4_xhttj"]
[ext_resource type="FontFile" uid="uid://dne07x6s8od4t" path="res://Assets/Fonts/ImpactfulBits.ttf" id="5_xy4pr"]

[sub_resource type="LabelSettings" id="LabelSettings_fds8w"]
font = ExtResource("5_xy4pr")
font_size = 13
font_color = Color(0.94902, 1, 0.94902, 1)

[node name="BestEnding" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5j16w")

[node name="Page1" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -114.0
offset_top = -84.0
offset_right = 114.0
offset_bottom = 84.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_rbkjt")

[node name="Page2" type="TextureRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_4b74h")

[node name="Page3" type="TextureRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_veaat")

[node name="Page4" type="TextureRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_xhttj")

[node name="Page5" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Conglaturation !!!

The world get to live another day !

Now go and rest our hero !"
label_settings = SubResource("LabelSettings_fds8w")
horizontal_alignment = 1
vertical_alignment = 1
